exercises/5-egress-Gateway/1-se-external-access.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: green-se
  namespace: test-tier
spec:
  hosts:
  - ec2-3-7-183-124.ap-south-1.compute.amazonaws.com
  ports:
  - number: 8181
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
