exercises/5-egress-Gateway/2-vs-external-access-with-delay.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: green-se
  namespace: test-tier
spec:
  hosts:
  - ec2-3-7-183-124.ap-south-1.compute.amazonaws.com
  ports:
  - number: 8181
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: green-vs-delay
  namespace: test-tier
spec:
  hosts:
    - ec2-3-7-183-124.ap-south-1.compute.amazonaws.com
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
           value: 100
    route:
      - destination: 
          host: ec2-3-7-183-124.ap-south-1.compute.amazonaws.com
        weight: 100
